# nuts-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml
.github/workflows/: audit.yml  coverage.yml  test.yml
benches/: sample.rs
examples/: adam_adaptation.rs  arrow_trace.rs  csv_trace.rs  hashmap_storage.rs  ndarray_storage.rs  sample_callback.rs  sample_normal.rs  zarr_async_trace.rs  zarr_trace.rs
nuts-derive/: Cargo.toml
nuts-derive/src/: lib.rs
nuts-derive/tests/: optional_string.rs  storable.rs
nuts-storable/: Cargo.toml
nuts-storable/src/: lib.rs
proptest-regressions/: math.txt
proptest-regressions/math/: util.txt
src/: adapt_strategy.rs  chain.rs  cpu.rs  cpu_math.rs  cpu_potential.rs  cpu_potentials.rs  cpu_sampler.rs  cpu_state.rs  csv_storage.rs  euclidean_hamiltonian.rs  external_adapt_strategy.rs  hamiltonian.rs  hashmap_storage.rs  integrator.rs  lib.rs  low_rank_mass_matrix.rs  mass_matrix.rs  mass_matrix_adapt.rs  math.rs  math_base.rs  mclmc.rs  model.rs  nuts.rs  potential.rs  sampler.rs  sampler_stats.rs  state.rs  statespace.rs  stepsize.rs  stepsize_adam.rs  stepsize_adapt.rs  transform_adapt_strategy.rs  transformed_hamiltonian.rs  tvm.rs  zarr_storage.rs
src/dynamics/: hamiltonian.rs  mod.rs  state.rs  transformed_hamiltonian.rs
src/mass_matrix/: adapt.rs  low_rank.rs  mod.rs
src/math/: cpu_math.rs  math.rs  mod.rs  test_logps.rs  util.rs
src/stepsize/: adam.rs  adapt.rs  dual_avg.rs  mod.rs
src/storage/: arrow.rs  core.rs  csv.rs  hashmap.rs  mod.rs  ndarray.rs  storage.rs
src/storage/zarr/: async_impl.rs  common.rs  mod.rs  sync_impl.rs
src/transform/: diagonal.rs  external.rs  low_rank.rs  mod.rs  transformation.rs
src/transform/adapt/: diagonal.rs  low_rank.rs  mod.rs  strategy.rs
src/zarr_storage/: common.rs  sync_impl.rs
tests/: sample_callback_test.rs  sample_normal.rs  zero_gradient_init.rs
