[package]
name = "nuts-rs"
version = "0.17.2"
authors = [
  "Adrian Seyboldt <adrian.seyboldt@gmail.com>",
  "PyMC Developers <pymc.devs@gmail.com>",
]
edition = "2024"
license = "MIT"
repository = "https://github.com/pymc-devs/nuts-rs"
keywords = ["statistics", "bayes"]
description = "Sample from unnormalized densities using Hamiltonian MCMC"

[profile.bench]
debug = true
lto = "fat"
opt-level = 2
codegen-units = 1

[dependencies]
rand = { version = "0.9.0", features = ["small_rng"] }
rand_distr = "0.5.0"
itertools = "0.14.0"
thiserror = "2.0.3"
rand_chacha = "0.9.0"
anyhow = "1.0.72"
faer = { version = "0.23.2", default-features = false, features = ["linalg"] }
pulp = "0.22.2"
rayon = "1.10.0"
zarrs = { version = "0.22.0", features = [
  "filesystem",
  "gzip",
  "sharding",
  "async",
], optional = true }
ndarray = { version = "0.17.1", optional = true }
arrow = { version = "57.0.0", optional = true }
arrow-schema = { version = "57.0.0", features = [
  "canonical_extension_types",
], optional = true }
nuts-derive = { path = "./nuts-derive", version = "0.1.0" }
nuts-storable = { path = "./nuts-storable", version = "0.2.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt", "sync", "fs"], optional = true }

[dev-dependencies]
proptest = "1.6.0"
pretty_assertions = "1.4.0"
criterion = "0.7.0"
nix = { version = "0.30.0", features = ["sched"] }
approx = "0.5.1"
equator = "0.4.0"
serde_json = "1.0"
ndarray = "0.17.1"
tempfile = "3.0"
zarrs_object_store = "0.5.0"
object_store = "0.12.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread"] }

[features]
zarr = ["dep:zarrs", "dep:tokio"]
ndarray = ["dep:ndarray"]
arrow = ["dep:arrow", "dep:arrow-schema"]

[[bench]]
name = "sample"
harness = false

[workspace]
